--- a/css/block/block-styles.css
+++ b/css/block/block-styles.css
@@ -223,6 +223,12 @@
   text-decoration-color: rgba(221, 221, 221, 0.65);
 }
 
+.block.bs-background-alert a,
+.block.bs-background-alert a:hover {
+  color: var(--ucb-black);
+  text-decoration: underline;
+}
+
 /*** Icon Styles ***/
 .bs-icon-size-increase {
   font-size: 200%;
