--- a/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
+++ b/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
@@ -148,9 +148,9 @@
             item.entity.field_newsletter_content_text.value|render %}
 	  					<!--Teaser Article-->
 					<center align="left">
-						<table role="presentation" width="600" style="padding-bottom: 20px;">
+						<table role="presentation" width="600" style="padding-bottom: 20px; border-bottom: solid 1px #cccccc;">
 							<tbody>
-								<tr class="email-feature-art-row"style="border-bottom: solid rgba(128, 128, 128, 0.333);">
+								<tr class="email-feature-art-row">
 									{# Image #}
                   {% if item.entity.field_newsletter_content_image.entity.field_media_image or  item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image or tem.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image %}
 									<td valign="top" width="27%"style="text-align: left; padding-right:10px; padding-left:10px">
